tests/ui/parser/inner-attr.stderr
error: an inner attribute is not permitted following an outer attribute
  --> $DIR/inner-attr.rs:3:1
   |
LL | #[feature(lang_items)]
   | ---------------------- previous outer attribute
LL |
LL | #![recursion_limit="100"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ not permitted following an outer attribute
LL | fn main() {}
   | ------------ the inner attribute doesn't annotate this function
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files

warning: crate-level attribute should be an inner attribute
  --> $DIR/inner-attr.rs:1:1
   |
LL | #[feature(lang_items)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: requested on the command line with `-W unused-attributes`
help: add a `!`
   |
LL | #![feature(lang_items)]
   |  +

error: aborting due to 1 previous error; 1 warning emitted

